force-app/main/default/objects/B25__Reservation_Type_Status__c/B25__Reservation_Type_Status__c.object-meta.xml
<CustomObject>
    <description>This object links Statuses to Reservation Types. Reservations are only valid if their Status is linked to their Reservation Type.</description>
    <label>Reservation Type Status</label>
    <nameField>
        <displayFormat>RTS-{00000}</displayFormat>
        <label>Reservation Type Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservation Type Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>