force-app/main/default/objects/B25__Reservation_Type_Status__c/fields/B25__Default__c.field-meta.xml
<CustomField>
    <fullName>B25__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this as the default Status for the selected Reservation Type. Applies only to the reservation form.</description>
    <inlineHelpText>Marque ce statut comme étant le statut par défaut pour le type de réservation sélectionné. S’applique uniquement au formulaire de réservation.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>