force-app/main/default/objects/B25__Reservation_Type_Status__c/fields/B25__Order__c.field-meta.xml
<CustomField>
    <fullName>B25__Order__c</fullName>
    <description>Defines the order in which the statuses appear in the status picklist on the reservation form. Lower numbers come first.</description>
    <inlineHelpText>Définit l’ordre dans lequel les statuts apparaissent dans la liste de sélection des statuts sur le formulaire de réservation. Les chiffres les plus bas viennent en premier.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>