force-app/main/default/objects/B25__Reservation_Type_Status__c/fields/B25__Reservation_Status__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Status__c</fullName>
    <description>The Status to be linked to the Reservation Type.</description>
    <inlineHelpText>Le statut à lier au type de réservation.</inlineHelpText>
    <label>Reservation Status</label>
    <referenceTo>B25__Reservation_Status__c</referenceTo>
    <relationshipLabel>Reservation Types</relationshipLabel>
    <relationshipName>Reservation_Type_Statuses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>