force-app/main/default/objects/B25__Reservation_Type_Status__c/fields/B25__Reservation_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Type__c</fullName>
    <description>The Reservation Type to be linked to the Status.</description>
    <inlineHelpText>Le type de réservation à lier au statut.</inlineHelpText>
    <label>Reservation Type</label>
    <referenceTo>B25__Reservation_Type__c</referenceTo>
    <relationshipLabel>Statuses</relationshipLabel>
    <relationshipName>Reservation_Type_Statuses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>